Added project and datasource specific summary request flow
